Fix old checkboxes apearing behind new ones
The old default chrome check boxes still appeared behind the `:before` ones.

--- a/theme/onedark.css
+++ b/theme/onedark.css
@@ -425,8 +425,13 @@ input {
 /* input:hover {
     background-color: var(--hover-bg-color2) !important;
 } */
+input[type="checkbox"] {
+  visibility: hidden;
+}
+
 /* checkbox */
 input[type="checkbox"]:before {
+  visibility: visible;
   content: "";
   display: inline-block;
   width: 1.2rem;
